# R-Type_BTTF

./: CMakeLists.txt  README.md  build.sh  conanfile.txt
.github/workflows/: test.yaml
client/: Core.cpp  Core.hpp  Global.hpp
client/GUI/: Graphics.cpp  Graphics.hpp
client/GUI/Objects/Input/: Input.cpp
client/GUI/Objects/Rectangle/: Rectangle.cpp  Rectangle.hpp
client/GUI/Objects/Text/: Text.cpp  Text.hpp
client/GUI/Pages/: APage.hpp
client/GUI/Pages/Games/: Enemy.cpp  GamePage.cpp  GamePage.hpp  Paralax.hpp  Player.cpp  Player.hpp  Shot.hpp
client/GUI/Pages/Menu/: MenuPage.cpp  MenuPage.hpp
client/GUI/Pages/Over/: OverPage.cpp
client/GUI/Pages/Setting/: LoginPage.cpp  LoginPage.hpp  RoomPage.cpp  RoomPage.hpp
client/GUI/Pages/Winner/: WinPage.cpp  WinPage.hpp
client/Graphic/: Graphics.cpp  Graphics.hpp
client/Graphic/Objects/: Entity.cpp  Entity.hpp
client/Graphic/Objects/Input/: Input.hpp
client/Graphic/Pages/: APage.cpp
client/Graphic/Pages/Games/: Enemy.hpp  Game.cpp  Paralax.cpp  Player.cpp  Player.hpp  Shot.cpp
client/Graphic/Pages/Menu/: MenuPage.cpp
client/Graphic/Pages/Over/: OverPage.cpp  OverPage.hpp
client/Graphic/Pages/Setting/: LoginPage.cpp  RoomPage.cpp
client/Network/: Network.cpp  Network.hpp
documentations/: RFC.txt
documentations/r-type/docs/: index.md
documentations/r-type/site/: 404.html  index.html
server/include/: Client.hpp  Enemy.hpp  Entity.hpp  Room.hpp  Server.hpp  Shot.hpp
server/source/: Client.cpp  Enemy.cpp  Entity.cpp  Room.cpp  Server.cpp  Shot.cpp
(+2 files in other folders)
